Fix color on mobile

--- a/ui/molecules/SocialButton/SocialButton.css
+++ b/ui/molecules/SocialButton/SocialButton.css
@@ -15,6 +15,7 @@
 
 .specific {
   color: var(--color);
+  background-color: #ffffff;
   border-color: var(--color);
 
   &:hover, &:focus, &:active, &.active {
